--- a/dashboard.html
+++ b/dashboard.html
@@ -11,8 +11,39 @@
 
     </style>
 </head>
-<body>
+<body >
+    <header>
+        <nav>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary " >
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">Navbar scroll</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarScroll">
+                        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">DashBoard</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">Customer</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">Items</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">Orders</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </nav>
+    </header>
 
+    <section>
+
+    </section>
 
 
     <script src="assets/fontAwesome/fontawesome-free-6.5.1-web/js/all.min.js">
