--- a/addCustomer.html
+++ b/addCustomer.html
@@ -7,6 +7,17 @@
 
 </head>
 <body>
+    <section>
+        <header>
+            <nav class="navbar bg-body-tertiary">
+                <div class="container-fluid">
+                    <h1 class="navbar-brand" >
+                        Add New Customers
+                    </h1>
+                </div>
+            </nav>
+        </header>
+    </section>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
