--- a/addCustomer.html
+++ b/addCustomer.html
@@ -3,28 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <title>addCustomers</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/normalize_css/normalize.css">
+
+    <style>
+        #section{
+            width: 500px;
+            height: 500px;
+            border: 2px solid black;
+        }
+    </style>
 
 </head>
 <body>
-    <section>
-        <header>
-            <nav class="navbar bg-body-tertiary">
-                <div class="container-fluid">
-                    <h1 class="navbar-brand" >
-                        Add New Customers
-                    </h1>
-                </div>
-            </nav>
-        </header>
+<section id="section">
+    <header>
+        <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+                <h1 class="navbar-brand">
+                    Add New Customers
+                </h1>
+            </div>
+        </nav>
+    </header>
 
-        <div>
-            <input class="form-control form-control-lg" type="text" placeholder=".form-control-lg" aria-label=".form-control-lg example">
-            <input class="form-control" type="text" placeholder="Default input" aria-label="default input example">
-            <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
+    <div>
+        <div class="mb-3 col-10" >
+            <label for="formGroupExampleInput" class="form-label">Customer Id</label>
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="customer id">
         </div>
-    </section>
+        <div class="mb-3 col-10" >
+            <label for="formGroupExampleInput2" class="form-label">Customer Name</label>
+            <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="customer name">
+        </div>
+        <div class="mb-3 col-10" >
+            <label for=" formGroupExampleInput2" class="form-label">City</label>
+            <input type="text" class="form-control" id=" formGroupExampleInput2" placeholder="city">
+        </div>
+        <div class="mb-3 col-10" >
+            <label for=" formGroupExampleInput2" class="form-label">Telephone Number</label>
+            <input type="number" class="form-control" id=" formGroupExampleInput" placeholder="telephone">
+        </div>
+    </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <div>
+        <button type="button" class="btn btn-danger">Close</button>
+        <button type="button" class="btn btn-success">Save</button>
+    </div>
+
+</section>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
