--- a/updateCustomer.html
+++ b/updateCustomer.html
@@ -7,13 +7,13 @@
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/normalize_css/normalize.css">
 
-    <style>
+<!--    <style>
         #section {
             width: 600px;
             height: 550px;
             border: 2px solid black;
         }
-    </style>
+    </style>-->
 
 </head>
 <body>
