--- a/dashboardForm.html
+++ b/dashboardForm.html
@@ -2,106 +2,101 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>dashboard form</title>
-    <link href="assets/normalize_css/normalize.css" rel="stylesheet">
-    <link href="assets/fontAwesome/fontawesome-free-6.5.1-web/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/normalize_css/normalize.css">
     <style>
-   /*     .dashboard_section{
-            width: 100px;
-            height: 100px;
-            background-color: black;
-        }*/
+        .container-fluid{
+            background-color: blue;
+        }
     </style>
+
 </head>
-<body >
-    <header>
-        <nav>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary " >
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Navbar scroll</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarScroll">
-                        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">DashBoard</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">Customer</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">Items</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">Orders</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </nav>
-    </header>
-
-    <section >
-        <div>
-            <div>
-
-            </div>
-            <div>
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th scope="col">Order_id</th>
-                        <th scope="col">Customer</th>
-                        <th scope="col">Item</th>
-                        <th scope="col">Quantity</th>
-                        <th scope="col">Discount</th>
-                        <th scope="col">Price</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                        <td>@fat</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                        <td>@fat</td>
-                        <td>@fat</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">4</th>
-                        <td>@twitter</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                        <td>@fat</td>
-                        <td>@fat</td>
-
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
+<body>
+<nav class="navbar navbar-expand-lg bg-body-tertiary " id="navBar" style="background-color: #365486">
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#" style="color: white">Dashboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#" style="color: white">Customers</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#" style="color: white">Items</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#" style="color: white">Orders</a>
+                </li>
+            </ul>
         </div>
-    </section>
-    <script src="assets/fontAwesome/fontawesome-free-6.5.1-web/js/all.min.js">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </div>
+</nav>
+
+<section >
+    <div>
+        <div>
+
+        </div>
+        <div>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Order_id</th>
+                    <th scope="col">Customer</th>
+                    <th scope="col">Item</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Discount</th>
+                    <th scope="col">Price</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                    <td>@mdo</td>
+                    <td>@mdo</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                    <td>@fat</td>
+                    <td>@fat</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                    <td>@fat</td>
+                    <td>@fat</td>
+                    <td>@fat</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td>@twitter</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                    <td>@fat</td>
+                    <td>@fat</td>
+
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</section>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
