some changes css body element

--- a/dashboardForm.html
+++ b/dashboardForm.html
@@ -10,10 +10,24 @@
         .container-fluid{
             background-color: blue;
         }
+
+        #body{
+            width: 100vw;
+            height: 100vh;
+            background-color: #365486;
+            position: relative;
+            overflow: hidden;
+        }
+
+        #table{
+            position: absolute;
+            top: 320px;
+            width: 100vw;
+        }
     </style>
 
 </head>
-<body>
+<body id="body">
 <nav class="navbar navbar-expand-lg bg-body-tertiary " id="navBar" style="background-color: #365486">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -41,10 +55,10 @@
 
 <section >
     <div>
-        <div>
-
-        </div>
-        <div>
+        <div id="total customers"></div>
+        <div></div>
+        <div></div>
+        <div id="table">
             <table class="table">
                 <thead>
                 <tr>
@@ -83,6 +97,24 @@
                 </tr>
                 <tr>
                     <th scope="row">4</th>
+                    <td>@twitter</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                    <td>@fat</td>
+                    <td>@fat</td>
+
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td>@twitter</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                    <td>@fat</td>
+                    <td>@fat</td>
+
+                </tr>
+                <tr>
+                    <th scope="row">6</th>
                     <td>@twitter</td>
                     <td>Thornton</td>
                     <td>@fat</td>
