add customer form h4 element

--- a/customerForm.html
+++ b/customerForm.html
@@ -58,6 +58,12 @@
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div id="d1" class="row margin col-sm-4 col-xs">
+            <h4 class="viewCustomerTitle">View Customers</h4>
+        </div>
+    </div>
 </section>
 
 
