--- a/dashboardForm.html
+++ b/dashboardForm.html
@@ -7,125 +7,170 @@
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/normalize_css/normalize.css">
     <style>
-        .container-fluid{
+        .container-fluid {
             background-color: blue;
         }
 
-        #body{
-            width: 100vw;
-            height: 100vh;
-            background-color: #365486;
-            position: relative;
+        #body {
+            background-color: #D9D9D9;
             overflow: hidden;
         }
 
-        #table{
+        #table {
             position: absolute;
             top: 320px;
             width: 100vw;
         }
+
+        .labels {
+            width: 200px;
+            height: 200px;
+            border: 2px solid black;
+            position: absolute;
+            top: 80px;
+            background-color: white;
+            border-radius: 20px;
+        }
+
+        #total_customers {
+            left: 20px;
+
+        }
+
+        #total_income {
+            right: 20px;
+        }
+
+        #total_orders {
+            left: 0;
+            right: 0;
+            margin: auto;
+        }
+
+        #table_head {
+            position: absolute;
+        }
+
     </style>
 
 </head>
 <body id="body">
-<nav class="navbar navbar-expand-lg bg-body-tertiary " id="navBar" style="background-color: #365486">
-    <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#" style="color: white">Dashboard</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#" style="color: white">Customers</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#" style="color: white">Items</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#" style="color: white">Orders</a>
-                </li>
-            </ul>
+
+<header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary " id="navBar" style="background-color: #365486">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#" style="color: white">Dashboard</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#" style="color: white">Customers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#" style="color: white">Items</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#" style="color: white">Orders</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
+</header>
 
-<section >
-    <div>
-        <div id="total customers"></div>
-        <div></div>
-        <div></div>
-        <div id="table">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">Order_id</th>
-                    <th scope="col">Customer</th>
-                    <th scope="col">Item</th>
-                    <th scope="col">Quantity</th>
-                    <th scope="col">Discount</th>
-                    <th scope="col">Price</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                    <td>@fat</td>
-                    <td>@fat</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                    <td>@fat</td>
-                    <td>@fat</td>
-                    <td>@fat</td>
-                </tr>
-                <tr>
-                    <th scope="row">4</th>
-                    <td>@twitter</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                    <td>@fat</td>
-                    <td>@fat</td>
-
-                </tr>
-                <tr>
-                    <th scope="row">5</th>
-                    <td>@twitter</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                    <td>@fat</td>
-                    <td>@fat</td>
-
-                </tr>
-                <tr>
-                    <th scope="row">6</th>
-                    <td>@twitter</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                    <td>@fat</td>
-                    <td>@fat</td>
-
-                </tr>
-                </tbody>
-            </table>
+<section>
+    <section>
+        <div id="total_customers" class="labels">
+            <h1>15</h1>
+            <label>Total Customers</label>
         </div>
+        <div id="total_orders" class="labels">
+            <h1>10</h1>
+            <label>Total Orders</label>
+        </div>
+        <div id="total_income" class="labels">
+            <h1>10</h1>
+            <label>Total Income</label>
+        </div>
+
+        <div id="table_head">
+            <label>View Order Details</label>
+        </div>
+    </section>
+
+    <div id="table">
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">Order_id</th>
+                <th scope="col">Customer</th>
+                <th scope="col">Item</th>
+                <th scope="col">Quantity</th>
+                <th scope="col">Discount</th>
+                <th scope="col">Price</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+                <td>@mdo</td>
+                <td>@mdo</td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+                <td>@fat</td>
+                <td>@fat</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>Thornton</td>
+                <td>@fat</td>
+                <td>@fat</td>
+                <td>@fat</td>
+                <td>@fat</td>
+            </tr>
+            <tr>
+                <th scope="row">4</th>
+                <td>@twitter</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+                <td>@fat</td>
+                <td>@fat</td>
+
+            </tr>
+            <tr>
+                <th scope="row">5</th>
+                <td>@twitter</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+                <td>@fat</td>
+                <td>@fat</td>
+
+            </tr>
+            <tr>
+                <th scope="row">6</th>
+                <td>@twitter</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+                <td>@fat</td>
+                <td>@fat</td>
+
+            </tr>
+            </tbody>
+        </table>
     </div>
+
 </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
