--- a/customerForm.html
+++ b/customerForm.html
@@ -11,30 +11,22 @@
     </style>
 </head>
 <body>
-<header>
-    <nav>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+<header id="header">
+    <nav class="navbar shadow p-1 mb-5 bg-body-tertiary rounded padding" style="background-color: #ffffff;">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar scroll</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-                        aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <a id="DashGroStore" class="navbar-brand" href="#">Fresh Mart</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarScroll">
-                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">DashBoard</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Customer</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Items</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Orders</a>
-                        </li>
-                    </ul>
+
+                <div class="collapse navbar-collapse headerPosition" id="navbarNavAltMarkup">
+                    <div class="navbar-nav position container topBotomBordersIn">
+                        <a class="nav-link active" aria-current="page" href="dashboardForm.html">Dashboard </a>
+                        <a class="nav-link active" href="customerForm.html">Customer</a>
+                        <a class="nav-link active" href="itemForm.html">Item</a>
+                        <a class="nav-link active" href="orderForm.html">Place Order</a>
+                    </div>
                 </div>
             </div>
         </nav>
