--- a/dashboardForm.html
+++ b/dashboardForm.html
@@ -6,80 +6,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/normalize_css/normalize.css">
-    <style>
-        .container-fluid {
-            background-color: blue;
-        }
-
-        #body {
-            background-color: #D9D9D9;
-            overflow: hidden;
-        }
-
-        #table {
-            position: absolute;
-            top: 320px;
-            width: 100vw;
-        }
-
-        .labels {
-            width: 200px;
-            height: 200px;
-            border: 2px solid black;
-            position: absolute;
-            top: 80px;
-            background-color: white;
-            border-radius: 20px;
-        }
-
-        #total_customers {
-            left: 20px;
-
-        }
-
-        #total_income {
-            right: 20px;
-        }
-
-        #total_orders {
-            left: 0;
-            right: 0;
-            margin: auto;
-        }
-
-        #table_head {
-            position: absolute;
-        }
-
-    </style>
 
 </head>
 <body id="body">
 
-<header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary " id="navBar" style="background-color: #365486">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#" style="color: white">Dashboard</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#" style="color: white">Customers</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#" style="color: white">Items</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#" style="color: white">Orders</a>
-                    </li>
-                </ul>
+<header id="header">
+    <nav class="navbar shadow p-1 mb-5 bg-body-tertiary rounded padding" style="background-color: #ffffff;">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a id="DashGroStore" class="navbar-brand" href="#">Fresh Mart</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse headerPosition" id="navbarNavAltMarkup">
+                    <div class="navbar-nav position container topBotomBordersIn">
+                        <a class="nav-link active" aria-current="page" href="dashboardForm.html">Dashboard </a>
+                        <a class="nav-link active" href="customerForm.html">Customer</a>
+                        <a class="nav-link active" href="itemForm.html">Item</a>
+                        <a class="nav-link active" href="orderForm.html">Place Order</a>
+                    </div>
+                </div>
             </div>
-        </div>
+        </nav>
     </nav>
 </header>
 
