--- a/itemForm.html
+++ b/itemForm.html
@@ -28,6 +28,30 @@
         </nav>
     </nav>
 </header>
+<section>
+    <div>
+        <div class="container-fluid searchBarParent">
+            <div id="searchBar" class="input-group mb-3">
+                <input id="searchInputField" type="text" class="form-control" placeholder="Search Items" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button class="btn btn-outline-secondary searchBtn" type="button" id="button-addon2">Search</button>
+            </div>
+        </div>
+
+        <div id="crudButton" class="relativePosition">
+            <div class="absolutePosition">
+                <button class="noBorder btn btn-outline-secondary newButton whiteTextColor" data-bs-toggle="modal" data-bs-target="#newModal" type="button">New</button>
+                <button class="noBorder btn-warning btn btn-outline-secondary updateButton whiteTextColor" data-bs-toggle="modal" data-bs-target="#updateModal" type="button">Update</button>
+                <button class="noBorder btn-danger btn btn-outline-secondary removeButton whiteTextColor" data-bs-toggle="modal" data-bs-target="#removeModal" type="button">Remove</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div id="d1" class="row margin col-sm-4 col-xs">
+            <h4 class="viewCustomerTitle">View Items</h4>
+        </div>
+    </div>
+</section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
