some changes customer table and item table

--- a/customerForm.html
+++ b/customerForm.html
@@ -62,7 +62,7 @@
             <thead>
             <tr>
                 <th class="OrderTableHead " scope="col">Customer_Id</th>
-                <th class="OrderTableHead" scope="col">Name</th>
+                <th class="OrderTableHead" scope="col">Customer_Name</th>
                 <th class="OrderTableHead" scope="col">Telephone</th>
                 <th class="OrderTableHead" scope="col">City</th>
             </tr>
