--- a/itemForm.html
+++ b/itemForm.html
@@ -51,6 +51,71 @@
             <h4 class="viewCustomerTitle">View Items</h4>
         </div>
     </div>
+    <div class="tableDiv customerTable">
+        <table class="table">
+            <thead>
+            <tr>
+                <th class="OrderTableHead " scope="col">Item_Id</th>
+                <th class="OrderTableHead" scope="col">Item_name</th>
+                <th class="OrderTableHead" scope="col">Quantity</th>
+                <th class="OrderTableHead" scope="col">Unit_Price</th>
+            </tr>
+            </thead>
+            <tbody id="orderTable">
+            <tr>
+                <th class="orderTableBody" scope="row">1</th>
+                <td class="orderTableBody">Mark</td>
+                <td class="orderTableBody">Otto</td>
+                <td class="orderTableBody">@mdo</td>
+
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">2</th>
+                <td class="orderTableBody">Jacob</td>
+                <td class="orderTableBody">Thornton</td>
+                <td class="orderTableBody">@fat</td>
+
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">3</th>
+                <td class="orderTableBody">Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">4</th>
+                <td class="orderTableBody" >Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">5</th>
+                <td class="orderTableBody" >Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">6</th>
+                <td class="orderTableBody" >Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">7</th>
+                <td class="orderTableBody" >Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
