--- a/customerForm.html
+++ b/customerForm.html
@@ -13,14 +13,8 @@
     <nav class="navbar shadow p-1 mb-5 bg-body-tertiary rounded padding" style="background-color: #ffffff;">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <nav class="navbar bg-body-tertiary">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="#">
-                            <img src="" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                            Fresh Mart
-                        </a>
-                    </div>
-                </nav>
+                <i class="bi bi-cart4"></i>
+                <a id="DashGroStore" class="navbar-brand" href="#">Fresh Mart</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
