--- a/orderForm.html
+++ b/orderForm.html
@@ -22,6 +22,7 @@
                         <a class="nav-link active" href="customerForm.html">Customer</a>
                         <a class="nav-link active" href="itemForm.html">Item</a>
                         <a class="nav-link active" href="orderForm.html">Place Order</a>
+                        <a class="nav-link active" href="orderForm.html">Log Out</a>
                     </div>
                 </div>
             </div>
