--- a/dashboardForm.html
+++ b/dashboardForm.html
@@ -28,7 +28,7 @@
                         <a class="nav-link active" href="customerForm.html">Customer</a>
                         <a class="nav-link active" href="itemForm.html">Item</a>
                         <a class="nav-link active" href="orderForm.html">Place Order</a>
-                        <a class="nav-link active" href="orderForm.html">Log Out</a>
+                        <a class="nav-link active" href="login.html">Log Out</a>
                     </div>
                 </div>
             </div>
