--- a/login.html
+++ b/login.html
@@ -2,14 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>login page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-    </style>
+    <link rel="stylesheet" href="assets/css/login.css">
 </head>
 <body>
 <section>
+    <div id="parent" class="col-6">
+        <div id="imageParent" class="col-6">
+            <img class="loginImage" src="assets/img/login1.jpg" alt="shop image" title="shop image">
+            <h2 id="head">Fresh Mart</h2>
+        </div>
+    </div>
+    <div id="position" class="col-6">
+        <div id="signUpParent">
+            <a href="signupPage.html"><h5 id="signUp">Sign up</h5></a>
+        </div>
+
+        <div id="loginLabel">
+            <h2>Login</h2>
+        </div>
+
+        <div class="mb-3 col-10" id="username">
+            <label for="formGroupExampleInput" class="form-label">Username</label>
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="username">
+        </div>
+        <div class="mb-3 col-10" id="password">
+            <label for="formGroupExampleInput2" class="form-label">password</label>
+            <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="password">
+        </div>
+
+        <div id="forgetPassword">
+            <a href="forgetPassword.index.html"><h6 id="labelForgetPassword">forget password</h6></a>
+        </div>
+
+        <div id="loginBtnParent">
+            <a href="dashboardForm.html">
+                <button type="button" id="loginBtn" class="btn btn-primary btn-size">Login</button>
+            </a>
+        </div>
+    </div>
 
 </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
