--- a/customerForm.html
+++ b/customerForm.html
@@ -9,36 +9,30 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-<header id="header">
-    <nav class="navbar shadow p-1 mb-5 bg-body-tertiary rounded padding" style="background-color: #ffffff;">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <div class="logo">
-                    <img src="assets/img/dashBoardLogo.png" id="logo">
-                </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+<header >
+    <nav class="navbar navbar-expand-lg navbar navbar navbar-light" style="background: #008DDA">
+        <a class="navbar-brand " href="#" id="logo">
+            <img src="assets/img/cart.png" width="50" height="50" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-                <div class="collapse navbar-collapse headerPosition" id="navbarNavAltMarkup">
-                    <div class="navbar-nav position container topBotomBordersIn">
-                        <a class="nav-link active" aria-current="page" href="dashboardForm.html">Dashboard </a>
-                        <a class="nav-link active" href="customerForm.html">Customer</a>
-                        <a class="nav-link active" href="itemForm.html">Item</a>
-                        <a class="nav-link active" href="orderForm.html">Place Order</a>
-                        <a class="nav-link active" href="login.html">Log Out</a>
-                    </div>
-                </div>
-            </div>
-        </nav>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto " id="navMenu">
+                <a class="nav-link active" aria-current="page" href="dashboardForm.html">Dashboard </a>
+                <a class="nav-link active" href="customerForm.html">Customer</a>
+                <a class="nav-link active" href="itemForm.html">Item</a>
+                <a class="nav-link active" href="orderForm.html">Place Order</a>
+                <a class="nav-link active" href="login.html">Log Out</a>
+            </ul>
+        </div>
     </nav>
 </header>
-
-<section>
+<section class="container mt-5">
     <div>
-        <div class="container-fluid searchBarParent">
+        <div class=" searchBarParent">
             <div id="searchBar" class="input-group mb-3">
                 <input id="searchInputField" type="text" class="form-control" placeholder="Search Customer"
                        aria-label="Recipient's username" aria-describedby="button-addon2">
@@ -48,20 +42,22 @@
 
         <div id="crudButton" class="relativePosition">
             <div class="absolutePosition">
-                <button class="noBorder btn btn-outline-secondary newButton whiteTextColor" data-bs-toggle="modal"
+                <button id="saveBtn" class="noBorder btn btn-outline-secondary newButton whiteTextColor"
+                        data-bs-toggle="modal"
                         data-bs-target="#savecustomer" type="button">Save
                 </button>
-                <button class="noBorder btn-warning btn btn-outline-secondary updateButton whiteTextColor"
+                <button id="updateBtn"
+                        class="noBorder btn-warning btn btn-outline-secondary updateButton whiteTextColor"
                         data-bs-toggle="modal" data-bs-target="#updatecustomer" type="button">Update
                 </button>
-                <button class="noBorder btn-danger btn btn-outline-secondary removeButton whiteTextColor"
+                <button id="deleteBtn" class="noBorder btn-danger btn btn-outline-secondary removeButton whiteTextColor"
                         data-bs-toggle="modal" data-bs-target="#deletecustomer" type="button">Delete
                 </button>
             </div>
         </div>
     </div>
 
-    <div class="row">
+    <div class="row mt-4">
         <div id="d1" class="row margin col-sm-4 col-xs">
             <h4 class="viewCustomerTitle">View Customers</h4>
         </div>
@@ -69,8 +65,8 @@
 
     <div class="tableDiv customerTable">
         <table class="table">
-            <thead>
-            <tr>
+            <thead class="tableHead">
+            <tr class="table-info">
                 <th class="OrderTableHead " scope="col">Customer_Id</th>
                 <th class="OrderTableHead" scope="col">Customer_Name</th>
                 <th class="OrderTableHead" scope="col">Telephone</th>
@@ -123,12 +119,6 @@
                 <td class="orderTableBody">@twitter</td>
             </tr>
 
-            <tr>
-                <th class="orderTableBody" scope="row">7</th>
-                <td class="orderTableBody">Larry the Bird</td>
-                <td class="orderTableBody">@twitter</td>
-                <td class="orderTableBody">@twitter</td>
-            </tr>
             </tbody>
         </table>
     </div>
@@ -144,20 +134,23 @@
             </div>
             <div class="modal-body">
                 <label for="customer_id" class="form-label ">Customer Id</label>
-                <input type="text" id="customer_id" class="form-control" placeholder="enter id" aria-label="Customer_Id">
+                <input type="text" id="customer_id" class="form-control" placeholder="enter id"
+                       aria-label="Customer_Id">
 
                 <label for="customer_name" class="form-label ">Customer Name</label>
-                <input type="text" id="customer_name" class="form-control" placeholder="enter name" aria-label="customer_Name">
+                <input type="text" id="customer_name" class="form-control" placeholder="enter name"
+                       aria-label="customer_Name">
 
                 <label for="city" class="form-label ">City</label>
                 <input type="text" id="city" class="form-control" placeholder="enter your city" aria-label="city">
 
                 <label for="telephone" class="form-label ">Telephone</label>
-                <input type="text" id="telephone" class="form-control" placeholder="enter your number" aria-label="telephone">
+                <input type="text" id="telephone" class="form-control" placeholder="enter your number"
+                       aria-label="telephone">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save </button>
+                <button type="button" class="btn btn-primary">Save</button>
             </div>
         </div>
     </div>
@@ -182,18 +175,19 @@
                 <input type="text" id="c_city" class="form-control" placeholder="enter your city" aria-label="city">
 
                 <label for="c_telephone" class="form-label ">Telephone</label>
-                <input type="text" id="c_telephone" class="form-control" placeholder="enter your number" aria-label="telephone">
+                <input type="text" id="c_telephone" class="form-control" placeholder="enter your number"
+                       aria-label="telephone">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Update </button>
+                <button type="button" class="btn btn-primary">Update</button>
             </div>
         </div>
     </div>
 </div>
 
 <!--delete Customers modal-->
-<div class="modal" tabindex="-1" id="deletecustomer">
+<div class="modal" tabindex="-1 " id="deletecustomer">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -209,8 +203,8 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Delete </button>
+                <button type="button" class="btn btn-secondary " data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Delete</button>
             </div>
         </div>
     </div>
