--- a/dashboardForm.html
+++ b/dashboardForm.html
@@ -11,55 +11,67 @@
 </head>
 <body id="body">
 
-<header id="header">
-    <nav class="navbar shadow p-1 mb-5 bg-body-tertiary rounded padding" style="background-color: #ffffff;">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <div class="logo">
-                    <img src="assets/img/dashBoardLogo.png" id="logo">
-                </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+<header >
+    <nav class="navbar navbar-expand-lg navbar navbar navbar-light" style="background: #008DDA">
+        <a class="navbar-brand " href="#" id="logo">
+            <img src="assets/img/cart.png" width="50" height="50" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-                <div class="collapse navbar-collapse headerPosition" id="navbarNavAltMarkup">
-                    <div class="navbar-nav position container topBotomBordersIn">
-                        <a class="nav-link active" aria-current="page" href="dashboardForm.html">Dashboard </a>
-                        <a class="nav-link active" href="customerForm.html">Customer</a>
-                        <a class="nav-link active" href="itemForm.html">Item</a>
-                        <a class="nav-link active" href="orderForm.html">Place Order</a>
-                        <a class="nav-link active" href="login.html">Log Out</a>
-                    </div>
-                </div>
-            </div>
-        </nav>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto " id="navMenu">
+                <a class="nav-link active" aria-current="page" href="dashboardForm.html">Dashboard </a>
+                <a class="nav-link active" href="customerForm.html">Customer</a>
+                <a class="nav-link active" href="itemForm.html">Item</a>
+                <a class="nav-link active" href="orderForm.html">Place Order</a>
+                <a class="nav-link active" href="login.html">Log Out</a>
+            </ul>
+        </div>
     </nav>
 </header>
 
-<section>
-    <section>
-        <div id="total_customers" class="labels">
-            <h1>15</h1>
-            <label>Total Customers</label>
-        </div>
-        <div id="total_orders" class="labels">
-            <h1>10</h1>
-            <label>Total Orders</label>
-        </div>
-        <div id="total_income" class="labels">
-            <h1>10</h1>
-            <label>Total Income</label>
+<main class="container mt-5">
+    <section class="row  d-flex align-items-center justify-content-center  " style="text-align: center" id="cards">
+        <div class="card text-bg-primary mb-3 " style="max-width: 15rem; " id="card1">
+            <div class="card-header">Total Customers</div>
+            <div class="card-body">
+                <h4 class="card-title">5</h4>
+                <img src="assets/img/customers.png" alt="">
+            </div>
         </div>
 
-        <div id="table_head">
-            <label>View Order Details</label>
+        <div class="container card text-bg-primary mb-3" style="max-width: 15rem;" id="card2">
+            <div class="card-header">Total Orders</div>
+            <div class="card-body">
+                <h4 class="card-title">5</h4>
+                <img id="orders" src="assets/img/orders2.png" alt="">
+            </div>
+        </div>
+
+        <div class="card text-bg-primary mb-3" style="max-width: 15rem;" id="card3">
+            <div class="card-header">Total Income</div>
+            <div class="card-body">
+                <h4 class="card-title">5</h4>
+                <img src="assets/img/income.png" alt="">
+            </div>
         </div>
     </section>
 
-    <div id="table">
-        <table class="table">
+    <div class=" searchBarParent col-4 ml-1" id="searchOrder">
+        <div id="searchBar" class="input-group mb-3">
+            <input id="searchInputField" type="text" class="form-control" placeholder="Search orders"
+                   aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button class="btn btn-outline-secondary searchBtn" type="button" id="button-addon2">Search</button>
+        </div>
+    </div>
+
+    <div class="dashBordTable">
+        <table class="table" >
             <thead>
-            <tr>
+            <tr class="table-info">
                 <th scope="col">Order_id</th>
                 <th scope="col">Customer</th>
                 <th scope="col">Item</th>
@@ -111,20 +123,11 @@
                 <td>@fat</td>
 
             </tr>
-            <tr>
-                <th scope="row">6</th>
-                <td>@twitter</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-                <td>@fat</td>
-                <td>@fat</td>
-
-            </tr>
             </tbody>
         </table>
     </div>
 
-</section>
+</main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
