--- a/login.html
+++ b/login.html
@@ -1,50 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>login page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login form</title>
+    <link rel="stylesheet" href="assets/css/login.css">
+    <link rel="stylesheet" href="assets/css/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/login.css">
 </head>
-<body>
-<section>
-    <div id="parent" class="col-6">
-        <div id="imageParent" class="col-6">
-            <img class="loginImage" src="assets/img/login1.jpg" alt="shop image" title="shop image">
-            <h2 id="head">Fresh Mart</h2>
+
+<body >
+
+<div id="main" class="container-fluid  justify-content-center container shadow-card left-box "  >
+    <span class="welcome">Welcome to the </span>
+    <span class="GreenCart" >GreenCart </span>
+    <h5>Hello! let's get started</h5>
+    <form id="form"  >
+        <div class="mb-3 mt-5 ms-3 me-3 userName justify-content-center " >
+            <label for="InputUserName" class="form-label">Enter your username</label>
+            <input type="text" class="form-control " id="InputUserName" aria-describedby="passwordHelp" placeholder="username">
         </div>
-    </div>
-    <div id="position" class="col-6">
-        <div id="signUpParent">
-            <a href="signupPage.html"><h5 id="signUp">Sign up</h5></a>
+        <div  class="mb-3 ms-3 me-3 password justify-content-center" >
+            <label for="InputPassword1" class="form-label" >Enter your password </label>
+            <input type="password" class="form-control" id="InputPassword1" placeholder="password">
+            <div class="form-text passwordHelp">Forget password?</div>
+        </div>
+        <div class="d-flex ">
+            <button  type="submit" class="btn btn-primary me-3 signIn">SIGN IN</button>
         </div>
 
-        <div id="loginLabel">
-            <h2>Login</h2>
+        <div class="noAcc">
+            <span>Don't have an account?</span>
+            <a href="signUp.html">Create</a>
         </div>
+    </form>
+</div>
 
-        <div class="mb-3 col-10" id="username">
-            <label for="formGroupExampleInput" class="form-label">Username</label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="username">
-        </div>
-        <div class="mb-3 col-10" id="password">
-            <label for="formGroupExampleInput2" class="form-label">password</label>
-            <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="password">
-        </div>
-
-        <div id="forgetPassword">
-            <a href="forgetPassword.index.html"><h6 id="labelForgetPassword">forget password</h6></a>
-        </div>
-
-        <div id="loginBtnParent">
-            <a href="dashboardForm.html">
-                <button type="button" id="loginBtn" class="btn btn-primary btn-size">Login</button>
-            </a>
-        </div>
-    </div>
-
-</section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
