--- a/orderForm.html
+++ b/orderForm.html
@@ -2,35 +2,296 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Order Form</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Orders Form</title>
+    <link rel="stylesheet" href="assets/normalize_css/normalize.css">
     <link rel="stylesheet" href="assets/css/order.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/bootstrap-5.3.3-dist/css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
-<body>
-<header id="header">
-    <nav class="navbar shadow p-1 mb-5 bg-body-tertiary rounded padding" style="background-color: #ffffff;">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <div class="logo">
-                    <img src="assets/img/dashBoardLogo.png" id="logo">
-                </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+<body style="overflow-x: hidden" >
+<header >
+    <nav class="navbar navbar-expand-lg navbar navbar navbar-light" style="background: #008DDA">
+        <a class="navbar-brand " href="#" id="logo">
+            <img src="assets/img/cart.png" width="50" height="50" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-                <div class="collapse navbar-collapse headerPosition" id="navbarNavAltMarkup">
-                    <div class="navbar-nav position container topBotomBordersIn">
-                        <a class="nav-link active" aria-current="page" href="dashboardForm.html">Dashboard </a>
-                        <a class="nav-link active" href="customerForm.html">Customer</a>
-                        <a class="nav-link active" href="itemForm.html">Item</a>
-                        <a class="nav-link active" href="orderForm.html">Place Order</a>
-                        <a class="nav-link active" href="login.html">Log Out</a>
-                    </div>
-                </div>
-            </div>
-        </nav>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto " id="navMenu">
+                <a class="nav-link active" aria-current="page" href="dashboardForm.html">Dashboard </a>
+                <a class="nav-link active" href="customerForm.html">Customer</a>
+                <a class="nav-link active" href="itemForm.html">Item</a>
+                <a class="nav-link active" href="orderForm.html">Place Order</a>
+                <a class="nav-link active" href="login.html">Log Out</a>
+            </ul>
+        </div>
     </nav>
 </header>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+
+<section id="order" style="margin-top: 30px" class="pb-5">
+    <div class="d-flex justify-content-end mt-3 me-3">
+        <button class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#myModal">All Orders</button>
+    </div>
+
+    <div class="row mt-3">
+        <div class="col-md-5 ">
+            <div class="card shadow-card mb-3 ms-3">
+                <div class="card-body">
+                    <h2 class="card-title">Add Item</h2>
+
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="form-group">
+                                <label for="item-code">Item Code</label>
+                                <input type="text" id="item-code" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-md-5">
+                            <div class="form-group">
+                                <label for="item-qty">Qty</label>
+                                <input type="text" id="item-qty" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-md-7">
+                            <div class="form-group">
+                                <label for="item-name">Item Name</label>
+                                <input type="text" id="item-name" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-md-5">
+                            <div class="form-group">
+                                <label for="item-price">Price</label>
+                                <input type="text" id="item-price" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+
+                    <button class="btn btn-primary btn-lg mt-3 fw-bold">Create</button>
+                </div>
+            </div>
+
+
+            <div class="card shadow-card mb-3 ms-3">
+                <div class="card-body">
+                    <h2 class="card-title">Order Details</h2>
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="form-group ">
+                                <label for="OrderID">Order Id</label>
+                                <input type="text" id="OrderID" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-md-5">
+                            <div class="form-group  ">
+                                <label for="customerId">Customer Id</label>
+                                <input type="text" id="customerId" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="form-group  ">
+                                <label for="date">Date</label>
+                                <input type="date" id="date" class="form-control">
+                            </div>
+                        </div>
+
+                        <div class="col-md-5">
+                            <div class="form-group  ">
+                                <label for="customerName">Customer Name</label>
+                                <input type="text" id="customerName" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+
+                    <button class="btn btn-primary mt-3 btn-lg fw-bold">Create</button>
+
+
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-7">
+            <div class="card me-3">
+                <div class="card-body">
+                    <h2 class="card-title ms-2">Invoice</h2>
+                    <div class="row">
+                        <div class="d-flex justify-content-around">
+                            <h5 class="justify-content-start">Select payment type</h5>
+                            <div class="form-check ">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                       id="flexRadioDefault1">
+                                <label class="form-check-label" for="flexRadioDefault1">
+                                    Cash
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                       id="flexRadioDefault2" checked>
+                                <label class="form-check-label" for="flexRadioDefault2">
+                                    Card
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row mt-3">
+                        <div class="col-md-7">
+                            <div class="form-group mb- cash">
+                                <label for="OrderID">Cash</label>
+                                <input type="text" id="cash" class="form-control">
+                            </div>
+                        </div>
+
+                        <div class="col-md-5">
+                            <div class="form-group mb- discount">
+                                <label for="date">Discount</label>
+                                <input type="text" id="discount" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="form-group mb- balance">
+                                <label for="customerId">Balance</label>
+                                <input type="text" id="balance" class="form-control">
+                            </div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group mb- Total">
+                                <label>Total</label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group mb- Discount">
+                                <label> Discount</label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group mb- NetTotal">
+                                <label>Net Total</label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <button class="btn btn-primary mt-3 fw-bold btn-lg">Perches</button>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Customer table-->
+    <div class="row justify-content-center m-2 ">
+        <div class="  col-lg-10   border border-light-subtle  mt-3  rounded shadow-card">
+            <h1>Cart</h1>
+            <div class="table-responsive">
+                <table class="p-5 table ">
+                    <!--Customer head-->
+                    <thead>
+                    <th>Item Code</th>
+                    <th>Item Name</th>
+                    <th>Item Price</th>
+                    <th>Qty</th>
+                    <th>Total</th>
+                    <th>Action</th>
+                    </thead>
+                    <!--Customer body-->
+                    <tbody>
+                    <tr>
+                        <td>I001</td>
+                        <td>Sunlight</td>
+                        <td>150.00</td>
+                        <td>3</td>
+                        <td>450.00</td>
+                        <td>
+                            <button>remove</button>
+                        </td>
+                    </tr>
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <!-- View all order Modal -->
+    <div class="modal mdal" id="myModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">Modal Heading</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th>Order ID</th>
+                            <th>Customer Id</th>
+                            <th>Customer Name</th>
+                            <th>Item Code</th>
+                            <th>Item Name</th>
+                            <th>Qty</th>
+                            <th>Total </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>john@example.com</td>
+                        </tr>
+                        <tr>
+                            <td>Mary</td>
+                            <td>Moe</td>
+                            <td>mary@example.com</td>
+                        </tr>
+                        <tr>
+                            <td>July</td>
+                            <td>Dooley</td>
+                            <td>july@example.com</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
