--- a/signUp.html
+++ b/signUp.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>signUp</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login form</title>
+    <link rel="stylesheet" href="assets/css/login.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<body >
 
+<div id="main" class="container-fluid  justify-content-center container shadow-card left-box "  >
+    <span class="welcome">Welcome to the </span>
+    <span class="GreenCart" >Green Cart </span>
+    <h5>Sign Up Here</h5>
+    <form id="form"  >
+        <div class="mb-3 mt-5 ms-3 me-3 userName justify-content-center " >
+            <label for="InputUserName" class="form-label">Enter your username</label>
+            <input type="text" class="form-control " id="InputUserName" aria-describedby="passwordHelp">
+        </div>
+        <div  class="mb-3 ms-3 me-3 password justify-content-center" >
+            <label for="InputPassword1" class="form-label">Enter your password </label>
+            <input type="password" class="form-control" id="InputPassword1">
+
+        </div>
+        <div class="d-flex ">
+            <button  type="submit" class="btn btn-primary me-3 signIn">SIGN UP</button>
+        </div>
+    </form>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
