spa branch some changes done

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </nav>
 </header>
 
-<!--sign-up page-->
-<section id="sign-up-form" class="container-fluid  justify-content-center container shadow-card left-box ">
+<!--sign-in page-->
+<section id="sign-in-form" class="container-fluid  justify-content-center container shadow-card left-box ">
     <span class="welcome">Welcome to the </span>
     <span class="GreenCart">GreenCart </span>
     <h5>Hello! let's get started</h5>
@@ -80,7 +80,7 @@
 
         </div>
         <div class="d-flex ">
-            <button type="submit" class="btn btn-primary me-3 signIn">SIGN UP</button>
+            <button type="button" class="btn btn-primary me-3 signIn" id="sign-up-btn">SIGN UP</button>
         </div>
     </form>
 </div>
